added ZGC output to notes.md M4E5